downward_api.yaml
apiVersion: v1
kind: Pod
metadata:
  name: downward-env
spec:
  imagePullSecrets:
    - name: ghcr-secret
  containers:
    - name: flask
      image: ghcr.io/soeun1230/downward_api:latest
      ports:
        - containerPort: 5000
